Z-index fix, Common Object validation added [jith]

--- a/wwwroot/css/Eb_ReportBuilder.css
+++ b/wwwroot/css/Eb_ReportBuilder.css
@@ -415,6 +415,8 @@
 .page-outer-cont {
     padding-right: 10px;
     padding-bottom: 50px;
+    position: relative;
+    z-index: 0;
 }
 .pageCanvas {
     position: relative;   
